--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@
 @import url(components/typography.css);
 @import url(components/visualization.css);
 @import url(components/nagivation.css);
+@import url(components/sidebar.css);
 
 @import url(layout/footer.css);
 @import url(layout/header.css);
