--- a/styles/components/sidebar.css
+++ b/styles/components/sidebar.css
@@ -110,6 +110,7 @@ html {
 @media screen and (max-width: 600px) {
   .header {
     justify-content: space-between;
+    background: #ffffff;
   }
 
   .sidebar {
@@ -122,6 +123,8 @@ html {
 
   .hamburger-menu {
     display: flex;
+    color: #d9d9d9;
+    font-size: 3rem;
   }
 
   .close-btn {
