--- a/styles/base/utilities.css
+++ b/styles/base/utilities.css
@@ -10,18 +10,14 @@
   opacity: 1;
 }
 
-.container_utility--colored {
-  background-color: var(--brand-light);
-}
 .content-wrapper {
   margin: 0 auto;
   max-width: 1280px;
   padding: 24px;
 }
 .container_utility--colored .content-wrapper {
-  background-color: bisque;
   border-radius: 24px;
-  box-shadow: 10px 10px 33px 0px rgba(0, 0, 0, 0.75);
+  border: 1px solid rgba(0, 0, 0, 0.093);
 }
 
 .section_title_utility {
