--- a/styles/components/sidebar.css
+++ b/styles/components/sidebar.css
@@ -104,7 +104,7 @@ html {
 
 .main-content {
   flex-grow: 1;
-  width: 75%;
+  width: calc(100% - 79px);
 }
 
 @media screen and (max-width: 600px) {
